--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --tg-theme-secondary-bg-color: #333B43;
     --tg-theme-text-color: #fff;
     --tg-theme-button-color: #57A5E7;
@@ -12,7 +12,7 @@
     --tg-theme-section-separator-color: #212529;
     --tg-theme-section-bg-color: #292E33;
     --tg-theme-hint-color: #748399;
-}
+} */
 @font-face{
     font-family: "PS";
     font-style: normal;
