--- a/styles.css
+++ b/styles.css
@@ -297,7 +297,8 @@ p{
 
 /* Стили для информационного окошка */
 .modal {
-    backdrop-filter: blur(60px);
+    backdrop-filter: blur(10px);
+    filter: url(#glass-distortion);
     padding: 20px;
     border-radius: 30px;
     width: 70%;
@@ -327,6 +328,7 @@ p{
     transition: 0.1s;
     transform: translateY(2px);
 }
+
 
 
 
