--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,10 @@ header {
     overflow: hidden;
     isolation: isolate;
     border-radius: 30px;
-    box-shadow: 0px 0px 20px var(--tg-theme-section-separator-color);
+    box-shadow:
+    inset -2px -2px 5px rgba(255, 255, 255, 0.05), 
+    inset 2px 2px 5px rgba(255, 255, 255, 0.05),
+    0 0 10px var(--tg-theme-section-separator-color);
     margin: 0;
     z-index: 3;
 }
@@ -303,7 +306,10 @@ p{
     border-radius: 30px;
     width: 70%;
     max-width: 600px;
-    box-shadow: 0px 0px 20px var(--tg-theme-section-separator-color);
+    box-shadow:
+    inset -2px -2px 5px rgba(255, 255, 255, 0.05), 
+    inset 2px 2px 5px rgba(255, 255, 255, 0.05),
+    0 0 10px var(--tg-theme-section-separator-color);
     text-align: center; /* Центрирование текста */
 }
 
@@ -328,6 +334,7 @@ p{
     transition: 0.1s;
     transform: translateY(2px);
 }
+
 
 
 
