--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,19 @@
 /* :root {
-    --tg-theme-secondary-bg-color: #333B43;
-    --tg-theme-text-color: #fff;
+    --tg-theme-secondary-bg-color: #151e27;
+    --tg-theme-text-color: #1d2733;
     --tg-theme-button-color: #57A5E7;
-    --tg-theme-bg-color: #292E33;
-    --tg-theme-button-text-color: #fff;
-    --tg-theme-button-color: #57A5E7;
-    --tg-theme-link-color: #57A5E7;
+    --tg-theme-bg-color: #212d3b;
+    --tg-theme-button-text-color: #ffffff;
+    --tg-theme-button-color: #50a8eb;
+    --tg-theme-link-color: #5eabe1;
     --tg-theme-section-header-text-color: #57A5E7;
-    --tg-theme-hint-color: #6c757d;
-    --tg-theme-destructive-text-color: #dc3545;
-    --tg-theme-section-separator-color: #212529;
-    --tg-theme-section-bg-color: #292E33;
-    --tg-theme-hint-color: #748399;
+    --tg-theme-hint-color: #7d8b99;
+    --tg-theme-destructive-text-color: #ee686f;
+    --tg-theme-section-separator-color: #0d1218;
+    --tg-theme-section-bg-color: #1d2733;
+    --tg-theme-bottom-bar-bg-color: #151e27;
+    --tg-theme-text-color: #fff;
+
 } */
 @font-face{
     font-family: "PS";
@@ -45,7 +47,7 @@ body {
 
 .sf {
     opacity: 0;
-    transition: opacity 2s ease-out;
+    transition: opacity 1s ease-out;
 }
 .visible {
     opacity: 1;
@@ -65,8 +67,8 @@ body {
     text-align: center;
 }
 .button:active {
-    transition: 0.1s;
-    transform: translateY(2px);
+    transition: 0.2s;
+    transform: scaleX(70%);
 }
 
 
@@ -82,7 +84,6 @@ header {
     grid-template-columns: auto auto 165px;
     grid-template-rows: 60px;
     backdrop-filter: blur(12px);
-    filter: url(#glass-distortion);
     overflow: hidden;
     isolation: isolate;
     border-radius: 30px;
@@ -134,6 +135,7 @@ header img {
 .first_info .svg_big {
     width: auto; 
     align-items: center;
+    margin-right: 5px;
     margin-bottom: 50px;
 }
 .first_info .text {
@@ -193,7 +195,7 @@ p{
     grid-template-rows: 80px 80px 80px;
 }
 .second_info .item_grid {
-    padding-top: 3px;
+    padding-top: 4.5px;
     text-align: left;
 }
 .second_info .title {
@@ -207,8 +209,8 @@ p{
 }
 .subtitle {
     font-family: "SF pro display";
+    font-weight: 700;
     font-size: 23px;
-    font-weight: 500;
 }
 .texts {
     vertical-align: 10px;
@@ -281,8 +283,8 @@ p{
     vertical-align: 2px;
 }
 .btn:active {
-    transition: 0.1s;
-    transform: translateY(2px);
+    transition: 0.2s;
+    transform: scaleX(70%);
 }
 
 .overlay {
@@ -301,15 +303,15 @@ p{
 /* Стили для информационного окошка */
 .modal {
     backdrop-filter: blur(12px);
-    filter: url(#glass-distortion);
     padding: 20px;
     border-radius: 30px;
     width: 70%;
     max-width: 600px;
+    border-color: rgba(0, 0, 0, 0.39);
     box-shadow:
     inset -2px -2px 5px rgba(255, 255, 255, 0.05), 
     inset 2px 2px 5px rgba(255, 255, 255, 0.05),
-    0 0 10px var(--tg-theme-section-separator-color);
+    0 0 10px rgba(255, 255, 255, 0.05);
     text-align: center; /* Центрирование текста */
 }
 
@@ -330,9 +332,50 @@ p{
     text-align: center;
     vertical-align: 2px;
 }
+
+.modal .sbutton {
+    padding: 5px 12px 5px;
+    width: 90%;
+    margin-bottom: 3px;
+    position: relative;
+    display: inline-block;
+    background-color: var(--tg-theme-button-color);
+    color: #fff;
+}
+
+.modal .title {
+    font-family: "SF pro display";
+    font-size: 23px;
+    color: #fff;
+}
+
+.modal .text { 
+    vertical-align: 10px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.modal .sbutton:active {
+    transition: 0.5s;
+    transform: scaleX(70%);
+}
+
+.modal .first {
+    border-radius: 15px 15px 4px 4px;
+}
+
+.modal .pi {
+    border-radius: 4px;
+}
+
+.modal .po {
+    border-radius: 4px 4px 15px 15px;
+}
+
 .close-button:active {
-    transition: 0.1s;
-    transform: translateY(2px);
+    transition: 0.2s;
+    transform: scaleX(70%);
 }
 
 
