--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ body {
 
 /* ВЕРХУШКА */
 header {
+    background: rgba(255, 255, 255, 0.034);
     position: fixed;
     top: 5px; 
     left: 5px; 
@@ -84,9 +85,11 @@ header {
     grid-template-columns: auto auto 165px;
     grid-template-rows: 60px;
     backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
     overflow: hidden;
     isolation: isolate;
     border-radius: 30px;
+    border: 0.1px solid rgba(255, 255, 255, 0.1);
     box-shadow:
     inset -2px -2px 5px rgba(255, 255, 255, 0.05), 
     inset 2px 2px 5px rgba(255, 255, 255, 0.05),
@@ -309,10 +312,13 @@ p{
     width: 70%;
     max-width: 600px;
     border-color: rgba(0, 0, 0, 0.39);
+    background: rgba(255, 255, 255, 0.034);
+    -webkit-backdrop-filter: blur(12px);
     box-shadow:
     inset -2px -2px 5px rgba(255, 255, 255, 0.05), 
     inset 2px 2px 5px rgba(255, 255, 255, 0.05),
     0 0 10px rgba(255, 255, 255, 0.05);
+    border: 0.1px solid rgba(255, 255, 255, 0.1);
     text-align: center; /* Центрирование текста */
 }
 
@@ -337,7 +343,6 @@ p{
 .modal .sbutton {
     padding: 5px 12px 5px;
     width: 90%;
-    margin-bottom: 3px;
     position: relative;
     display: inline-block;
     background-color: var(--tg-theme-button-color);
@@ -364,10 +369,12 @@ p{
 
 .modal .first {
     border-radius: 15px 15px 4px 4px;
+    margin-bottom: 3px;
 }
 
 .modal .pi {
     border-radius: 4px;
+    margin-bottom: 3px;
 }
 
 .modal .po {
@@ -378,8 +385,6 @@ p{
     transition: 0.2s;
     transform: scaleX(70%);
 }
-
-
 
 
 
