--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ p{
 .third_info .img_esc {
     width: auto;
     height: 230px;
-    background: var(--tg-theme-button-color);
+    background: var(--tg-theme-secondary-bg-color);
     border-radius: 20px;
     margin-bottom: 8px;
     padding-bottom: 1.2px;
@@ -392,3 +392,4 @@ p{
     transition-duration: 100ms;
     scale: .90;
 }
+
