--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ body {
 
 /* ВЕРХУШКА */
 header {
-    background: rgba(255, 255, 255, 0.034);
+    /* background: rgba(255, 255, 255, 0.034); */
     position: fixed;
     top: 5px; 
     left: 5px; 
@@ -86,16 +86,16 @@ header {
     min-width: 100px;
     grid-template-columns: auto auto 165px;
     grid-template-rows: 60px;
-    backdrop-filter: blur(12px);
-    -webkit-backdrop-filter: blur(12px);
+    /* backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px); */
     overflow: hidden;
     isolation: isolate;
     border-radius: 30px;
-    border: 0.1px solid rgba(255, 255, 255, 0.1);
+    /* border: 0.1px solid rgba(255, 255, 255, 0.1);
     box-shadow:
     inset -2px -2px 5px rgba(255, 255, 255, 0.05), 
     inset 2px 2px 5px rgba(255, 255, 255, 0.05),
-    0 0 10px var(--tg-theme-section-separator-color);
+    0 0 10px var(--tg-theme-section-separator-color); */
     margin: 0;
     z-index: 3;
 }
@@ -143,7 +143,7 @@ header img {
     margin-right: 5px;
     margin-bottom: 50px;
 }
-.first_info .text {
+.text {
     font-family: "SF pro display";
     width: auto; 
     line-height: 37px;
@@ -360,7 +360,7 @@ p{
     color: #fff;
 }
 
-.modal .text { 
+.modal .textss { 
     vertical-align: 10px;
     color: #fff;
     font-size: 16px;
@@ -392,4 +392,3 @@ p{
     transition-duration: 100ms;
     scale: .90;
 }
-
