--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
     --tg-theme-secondary-bg-color: #151e27;
     --tg-theme-text-color: #1d2733;
     --tg-theme-button-color: #57A5E7;
@@ -14,7 +14,7 @@
     --tg-theme-bottom-bar-bg-color: #151e27;
     --tg-theme-text-color: #fff;
 
-} */
+}
 @font-face{
     font-family: "PS";
     font-style: normal;
@@ -310,19 +310,10 @@ p{
 
 /* Стили для информационного окошка */
 .modal {
-    backdrop-filter: blur(12px);
     padding: 20px;
     border-radius: 30px;
     width: 70%;
     max-width: 600px;
-    border-color: rgba(0, 0, 0, 0.39);
-    background: rgba(255, 255, 255, 0.034);
-    -webkit-backdrop-filter: blur(12px);
-    box-shadow:
-    inset -2px -2px 5px rgba(255, 255, 255, 0.05), 
-    inset 2px 2px 5px rgba(255, 255, 255, 0.05),
-    0 0 10px rgba(255, 255, 255, 0.05);
-    border: 0.1px solid rgba(255, 255, 255, 0.1);
     text-align: center; /* Центрирование текста */
 }
 
